Add Set Grid Feature

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <button>New Grid</button>
+    <div class="container">
+
+    </div>
 </body>
 </html>
